@@ -1339,6 +1339,105 @@ Copyright (C) 2004-2005 Vladimir Berezniker @ http://public.xdi.org/=vmpn
           </map>
         </map>
       </map>
+      <key>skins-dark</key>
+      <map>
+        <key>copyright</key>
+        <string />
+        <key>description</key>
+        <string>dark viewer skin</string>
+        <key>license</key>
+        <string>creative commons attribution-share alike 3.0</string>
+        <key>packages</key>
+        <map>
+          <key>darwin</key>
+          <map>
+            <key>md5sum</key>
+            <string>2918ade2f6ca01f9b15f53991a13f34e</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-dark-20100103.tar.bz2</uri>
+          </map>
+          <key>linux</key>
+          <map>
+            <key>md5sum</key>
+            <string>2918ade2f6ca01f9b15f53991a13f34e</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-dark-20100103.tar.bz2</uri>
+          </map>
+          <key>windows</key>
+          <map>
+            <key>md5sum</key>
+            <string>2918ade2f6ca01f9b15f53991a13f34e</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-dark-20100103.tar.bz2</uri>
+          </map>
+        </map>
+      </map>
+      <key>skins-gemini</key>
+      <map>
+        <key>copyright</key>
+        <string />
+        <key>description</key>
+        <string>dark viewer skin</string>
+        <key>license</key>
+        <string>creative commons attribution-share alike 3.0</string>
+        <key>packages</key>
+        <map>
+          <key>darwin</key>
+          <map>
+            <key>md5sum</key>
+            <string>0acbcfe1eeb6b7f06d30c0484a07f5cb</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-gemini-20100103.tar.bz2</uri>
+          </map>
+          <key>linux</key>
+          <map>
+            <key>md5sum</key>
+            <string>0acbcfe1eeb6b7f06d30c0484a07f5cb</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-gemini-20100103.tar.bz2</uri>
+          </map>
+          <key>windows</key>
+          <map>
+            <key>md5sum</key>
+            <string>0acbcfe1eeb6b7f06d30c0484a07f5cb</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-gemini-20100103.tar.bz2</uri>
+          </map>
+        </map>
+      </map>
+      <key>skins-meerkat</key>
+      <map>
+        <key>copyright</key>
+        <string />
+        <key>description</key>
+        <string>dark viewer skin</string>
+        <key>license</key>
+        <string>creative commons attribution-share alike 3.0</string>
+        <key>packages</key>
+        <map>
+          <key>darwin</key>
+          <map>
+            <key>md5sum</key>
+            <string>51522bf8cf8f523f82fc650824736be3</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-meerkat-20100103.tar.bz2</uri>
+          </map>
+          <key>linux</key>
+          <map>
+            <key>md5sum</key>
+            <string>51522bf8cf8f523f82fc650824736be3</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-meerkat-20100103.tar.bz2</uri>
+          </map>
+          <key>windows</key>
+          <map>
+            <key>md5sum</key>
+            <string>51522bf8cf8f523f82fc650824736be3</string>
+            <key>url</key>
+            <uri>http://imprudenceviewer.org/download/extras/skins-meerkat-20100103.tar.bz2</uri>
+          </map>
+        </map>
+      </map>
       <key>theora</key>
       <map>
         <key>copyright</key>
